# knowledge-graph

./: .clineignore  .env.example  .gitignore  CLAUDE.md  LICENSE  pyproject.toml  pyrightconfig.json  pytest.ini  requirements.txt
.clinerules/: ui.md
apps/api/src/: main.py  models.py  requirements.txt
apps/api/tests/: context.py
apps/frontend/: .env.local.example  CLAUDE.md  README.md  tsconfig.json
apps/frontend/src/app/: layout.tsx
apps/frontend/src/utils/: constants.ts  shareUtils.ts
memory-bank/: auto-clear-preview-on-full-screen.md  browser-navigation.md  connected-graph-navigation-plan.md  example-select-event.json  fix-full-screen-mode-seed-issue.md  handle-orphaned-graphs.md  import-export-connected-graphs.md  info-badge-improvement.md  smart-generate-preview-position.md  solve-tool-tip-preview-conflict.md  sub-graph-regeneration.md  visual-distinction-for-sub-graph-nodes.md
src/app/: graph.py  main.py  models.py  requirements.txt
src/frontend/: README.md  next.config.js  next.config.ts  package-lock.json  package.json  tsconfig.json
src/frontend/components/KnowledgeGraph/: GraphGenerator.tsx  GraphNavigation.tsx  GraphVisualization.tsx  index.tsx
src/frontend/hooks/: useGraphData.tsx  useKeyboardShortcuts.tsx  useLocalStorage.tsx
src/frontend/pages/: index.tsx
src/frontend/src/app/: layout.tsx  page.tsx
src/frontend/src/hooks/: useBrowserNavigation.tsx  useGraphData.tsx  useKeyboardShortcuts.tsx  useLocalStorage.tsx  (+2 more)
src/frontend/utils/: constants.ts  graphUtils.ts  shareUtils.ts
tests/: __init__.py  context.py  test_models.py
(+29 files in other folders)
