[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "knowledge_graph_app"
version = "0.1.0"
description = "Knowledge Graph Application"
authors = [{name = "John Lockwood", email = "johnwlockwood@gmail.com"}]
dependencies = [
    "fastapi",
    "uvicorn",
    "openai",
    "instructor",
    "pydantic",
    "dotenv>=0.9.9",
]
requires-python = ">=3.13"

[tool.uv]
package-path = "src/app"

[tool.ruff]
line-length = 79