[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "knowledge_graph_app"
version = "0.1.0"
description = "Knowledge Graph Application"
authors = [{name = "John Lockwood", email = "johnwlockwood@gmail.com"}]
dependencies = [
    "fastapi",
    "uvicorn",
    "openai",
    "instructor",
    "pydantic",
    "dotenv>=0.9.9",
    "httpx>=0.28.1",
]
requires-python = ">=3.13"

[tool.uv.sources]

[tool.uv]
dev-dependencies = ["ruff>=0.8.0"]

[tool.ruff]
line-length = 79
